# summer_intern_project

./: .env.example  README.md  pyproject.toml  run.sh  run_ui.sh  test_quicksight.py
src/: app.py  main.py  manager.py
src/agents/: coordinator_agent.py  data_insights_agent.py  data_visualizer_agent.py  visual_coordinator_agent.py  web_search_agent.py
src/agents/tools/: insights_planner.py  quicksight_agent.py  sql_analyzer.py  visual_creator.py  visual_planner.py
src/memory/: agent_memory.py
src/services/: quicksight_service.py
